--- a/homeApp/templates/homeApp/home.html
+++ b/homeApp/templates/homeApp/home.html
@@ -23,7 +23,7 @@
  
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
          <div class="container">
-             <a class="navbar-brand" href="index.html">
+             <a class="navbar-brand" href="">
                  <h3 class="my-heading ">Yasir<span class="bg-main">Mehmood</span></h3>
              </a>
              <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,10 +62,10 @@
                  </form>
                  <ul class="navbar-nav ml-auto">
                      <li class="nav-link">
-                         <a class="btn btn-primary btn-block btn-login" href="#">Login</a>
+                         <a class="btn btn-primary btn-block btn-login" href="login">Login</a>
                      </li>
                      <li class="nav-link">
-                         <a class="btn btn-primary btn-block btn-register" href="#">Register</a>
+                         <a class="btn btn-primary btn-block btn-register" href="login">Register</a>
                      </li>
  
                  </ul>
