--- a/homeApp/templates/homeApp/home.html
+++ b/homeApp/templates/homeApp/home.html
@@ -47,8 +47,8 @@
               <li class="nav-item"><a class="nav-link" href="#">Music</a></li>
               <li class="nav-item"><a class="nav-link" href="#">Marketplace</a></li>
               <li class="nav-item"><a class="nav-link" href="#">Featured Artists</a></li>
-              <script></script><li class="nav-item"><a class="nav-link" href="#">Login</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Register</a></li>
+              <script></script><li class="nav-item"><a class="nav-link" href="login">Login</a></li>
+              <li class="nav-item"><a class="nav-link" href="login">Register</a></li>
               
               
            </ul>
